--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     rel="stylesheet"
     href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
-   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script> <!--  Реакт -->
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script><!--  Реакт -->
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> <!--  JSX -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="slider.js" defer></script>
+    <script src= "./slider.js" defer></script>
     <script src="./time.js" type="text/babel" defer></script>
+    <script src="service.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -27,16 +28,16 @@
             <nav>
                 <ul class="d-flex navigator-list">
                     <li class="navigator-item">
-                        <a href="">Главная</a>
+                        <a href="index.html">Главная</a>
+                    </li>
+                    <!-- <li class="navigator-item">
+                        <a href="portfolio.html">Портфолио</a>
+                    </li> -->
+                    <li class="navigator-item">
+                        <a href="service.html">Услуги</a>
                     </li>
                     <li class="navigator-item">
-                        <a href="">Портфолио</a>
-                    </li>
-                    <li class="navigator-item">
-                        <a href="">Услуги</a>
-                    </li>
-                    <li class="navigator-item">
-                        <a href="">Контакты</a>
+                        <a href="contact.html">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -77,6 +78,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                       <img class="slider-image" src="./image/I.png" alt="Фотография основателя">
+                      <p class="title-slider">Технический директор и разработчик студии</p>
                   </div>
                   <div class="swiper-slide">
                       <img src="./image/logo/logo.png" alt="">
@@ -177,20 +179,28 @@
 
                 <ul class="service__list d-flex space-between">
                     <li class="service__item">
+                        <img class="image__service" src="./image/icons/site.png" alt="Сайт визитка">
                         <p class="text-center ">Сайт визитка</p>
                         <p class="service__price text-center">От 10 000 рублей</p>
+                        <button class="sent-button" id="aboutVisitka">Подробнее</button>
                     </li>
                     <li class="service__item">
+                        <img class="image__service" src="./image/icons/serves.png" alt="Поддержка сайта">
                         <p class="text-center">Поддержка сайта</p>
                         <p class="service__price text-center">От 10 000 рублей</p>
+                        <button class="sent-button" id="aboutServers">Подробнее</button>
                     </li>
                     <li class="service__item">
+                        <img class="image__service" src="./image/icons/function.png" alt="Функциональная доработка">
                         <p class="text-center">Функциональная доработка</p>
                         <p class="service__price text-center">От 10 000 рублей</p>
+                        <button class="sent-button" id="aboutFunctionUpgrate">Подробнее</button>
                     </li>
                     <li class="service__item">
+                        <img class="image__service" src="./image/icons/sale.png" alt="Создание интернет магазина">
                         <p class="text-center">Создание интернет магазина</p>
-                        <p class="service__price text-center">От 50 000 рублей</p>
+                        <p class="service__price text-center">От 200 000 рублей</p>
+                        <button class="sent-button" id="aboutMarket">Подробнее</button>
                     </li>
                 </ul>
             </div>
@@ -245,16 +255,16 @@
             <nav>
                 <ul class="d-flex navigator-list">
                     <li class="navigator-item">
-                        <a href="">Главная</a>
+                        <a href="index.html">Главная</a>
+                    </li>
+                    <!-- <li class="navigator-item">
+                        <a href="portfolio.html">Портфолио</a>
+                    </li> -->
+                    <li class="navigator-item">
+                        <a href="service.html">Услуги</a>
                     </li>
                     <li class="navigator-item">
-                        <a href="">Портфолио</a>
-                    </li>
-                    <li class="navigator-item">
-                        <a href="">Услуги</a>
-                    </li>
-                    <li class="navigator-item">
-                        <a href="">Контакты</a>
+                        <a href="contact.html">Контакты</a>
                     </li>
                 </ul>
             </nav>
