--- a/index.html
+++ b/index.html
@@ -219,8 +219,12 @@
         <section id="portfolio" class="portfolio">
             <h2 class="sr-only">Портфолио</h2>
             <div class="container">
-                <h2 class="text-center">Портфолио</h2>
+                <h2 class="text-center">ПОРТФОЛИО</h2>
             
+                <div class="border__blue">
+
+                </div>
+
                 <ul class="">
                     <li class="portfolio__item">
                         <button id="clothes" class="portfolio__button">Одежда</button>
@@ -304,7 +308,7 @@
                     г.Мытищи, ул. 2-ая Институтская 18
                 </address>
     
-                <ul class= " ">
+                <ul>
                     <li class=" size768-text-center">
                         <a href="tel:+79779207740">+7 (977) 920-77-40</a>
                     </li>
