--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@
                         <ul>
                             <li class="send-item">
                                 <label class="send-label text-center">Ваше имя</label>
-                                <input class="send-input" id="name" name="name" type="text" placeholder="Ваше имя">
+                                <input class="send-input" id="name" name="name" type="text" placeholder="Ваше имя" maxlength="30" required>
                             </li>
                             <li class="send-item">
                                 <label class="send-label text-center">Ваша почта</label>
-                                <input class="send-input" id="email" name="email" type="text" placeholder="Ваша почта">
+                                <input class="send-input" id="email" name="email" type="text" placeholder="Ваша почта" maxlength="30" required>
                             </li>
                             <li class="send-item">
                                 <label class="send-label text-center">Ваш номер телефона</label>
-                                <input class="send-input" id="numberPhone" name="numberPhone" type="number" placeholder="Ваш номер телефона">
+                                <input class="send-input" id="numberPhone" name="numberPhone" type="number" placeholder="Ваш номер телефона" required >                      
                             </li>
                             <li class="send-item">
                                 <p>Нажимая кнопку "отправить" Вы соглашаетесь на обработку персональных данных</p>
@@ -315,10 +315,16 @@
                     <li class="size768-text-center ">
                         <a href="mailto:info-develop@yandex.ru">info-develop@yandex.ru</a>
                     </li>
+                    <li>
+                        <a href="whatsapp://send?phone=79779207740">
+                            Связаться по WhatsApp
+                        </a>
+                    </li>
                 </ul>
             </div>
 
         </div>
+        
     </footer>
 </body>
 </html>
